@@ -26,14 +26,17 @@ VERSIONS
 --------------------------------------------------
 v0.5
 --------------------------------------------------
-Released: 15/05/2013
+Released: 21/05/2013
 
 ./ Production ready
 
 Change log:
 
+[B] AGN, OFVER: Missing settings for agent. Issue 162
+[B] EXP: Referencing same requested flowspaces to show the ones granted. Issue 159
 [B] EXP: Plugin system interferes with basic authentication for AMs. Issue 158
 [B] EXP: Exception booking flowspace in simple mode. Issue 155
+[T] Migrate repositories. Issue 149
 [B] EXP: Role permissions not being updated for users with that role. Issue 148
 [B] EXP: Permission error when project owner edits other's roles. Issue 141
 [*] EXP: Mail delivery may take too long under some circumstances. Issue 139
